<resources>
    <string name="app_name">Super Cart</string>
    <string name="open">Open Navigation</string>
    <string name="close"> Close Navigation</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_id">Email id</string>
    <string name="password">Password</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="login">Login</string>
    <string name="i_dont_have_an_account">I DON\'T HAVE AN ACCOUNT</string>
    <string name="register">REGISTER</string>
    <string name="i_have_an_account">I HAVE AN ACCOUNT</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_no">Mobile No</string>
    <string name="super_cart">Super Cart</string>
</resources>