<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="40dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/eg_full_name_text"
        android:text="@string/full_name"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="12dp"
        android:background="@drawable/rounded_for_login"
        app:layout_constraintTop_toTopOf="@id/eg_full_name_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/full_name"
        android:id="@+id/text_mobile"
        android:text="@string/mobile_no"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/mobile_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="12dp"
        android:background="@drawable/rounded_for_login"
        app:layout_constraintTop_toBottomOf="@+id/text_mobile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/email_text"
        app:layout_constraintTop_toBottomOf="@id/mobile_no"
        android:text="@string/email_id"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="12dp"
        android:background="@drawable/rounded_for_login"
        app:layout_constraintTop_toBottomOf="@+id/email_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/password_header_text"
        app:layout_constraintTop_toBottomOf="@id/email_id"
        android:text="@string/password"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:padding="12dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_for_login"
        app:layout_constraintTop_toBottomOf="@+id/password_header_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_button"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/shape_for_login_button"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/have_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/i_have_an_account"
        android:textColor="#FF9800"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/register_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
