<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="32dp"
    tools:context=".view.fragments.LoginFragment">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:id="@+id/guide_line_horizontal"
        app:layout_constraintGuide_percent="0.28"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="120dp"
        android:layout_height="140dp"
        android:src="@mipmap/ic_splash_screen"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/guide_line_horizontal"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/guide_line_horizontal"
        android:text="@string/email_id"
        android:textSize="20sp"
        android:id="@+id/email_text"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="4dp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@+id/email_text"
        android:background="@drawable/rounded_for_login"
        android:id="@+id/email_ed_text"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/email_ed_text"
        android:text="@string/password"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        android:id="@+id/password_text"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="4dp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@+id/password_text"
        android:background="@drawable/rounded_for_login"
        android:id="@+id/ed_text_password"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ed_text_password"
        android:text="@string/forgot_password"
        android:textColor="#C36819"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:id="@+id/forgot_password_text"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/login_button"
        android:text="@string/login"
        android:textColor="@color/white"
        android:layout_marginTop="28dp"
        android:textStyle="bold"
    android:background="@drawable/shape_for_login_button"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_text"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        android:text="@string/i_dont_have_an_account"
        android:textSize="20sp"
        android:textColor="#C36819"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/text_no_account"/>

</androidx.constraintlayout.widget.ConstraintLayout>